<resources>
    <string name="app_name">NumericalTransfer</string>
    <string name="buttonStart">Start</string>
    <string name="buttonInfo">Information</string>
    <string name="informationMessage">I have made this program to improve my skills.</string>
    <string name="confirmButtonText">CONFIRM</string>
    <string name="delButtonText">DEL</string>
    <string name="answerButtonText">ANSWER</string>
    <string name="alertDialogPositive">Continue</string>
    <string name="alertDialogNegative">Quit</string>
    <string name="alertDialogTitle">Time is UP!</string>
    <string name="alertDialogMessage">some message will be in future</string>
    <string name="backButtonDialogTitle">Quit</string>
    <string name="backButtonDialogMessage">Are you sure?</string>
    <string name="backButtonDialogPositive">YES</string>
    <string name="backButtonDialogNegative">NO</string>
    <string name="decimalText">Decimal:</string>
    <string name="binaryText">Binary:</string>
    <string name="alertDialogNeutral">Results</string>
</resources>
