<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="derkach.andrei.numericaltransfer.MainTrainingScreen">

    <Button
        android:id="@+id/numPad1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="0dp"
        android:onClick="numPad1ButtonPush"
        android:text="1"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/space" />

    <Button
        android:id="@+id/confirmButton"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="16dp"
        android:onClick="confirmButtonPush"
        android:text="@string/confirmButtonText"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/numPad1"
        app:layout_constraintLeft_toLeftOf="parent" />

    <Button
        android:id="@+id/delButton"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginRight="16dp"
        android:onClick="delButtonPush"
        android:text="@string/delButtonText"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/numPad0"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/numPad0"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="24dp"
        android:onClick="numPad0ButtonPush"
        android:text="0"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toRightOf="@+id/space"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/taskText"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="0dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        android:background="@android:color/background_light"
        android:fontFamily="sans-serif"
        android:gravity="center"
        android:text="Task"
        android:textAlignment="center"
        android:textAppearance="@android:style/TextAppearance.Material.Large"
        android:textColor="@android:color/black"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/answerText"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/timerText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Timer"
        android:textColor="@android:color/black"
        android:textSize="30sp"
        app:layout_constraintTop_toTopOf="@+id/taskText"
        android:layout_marginTop="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="@+id/taskText" />

    <Space
        android:id="@+id/space"
        android:layout_width="5dp"
        android:layout_height="5dp"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/answerText"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        android:background="@android:color/white"
        android:gravity="center"
        android:text="answer"
        android:textColor="@android:color/black"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/answerButton"
        app:layout_constraintDimensionRatio="h,1:0.5"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/answerButton"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:onClick="answerButtonPush"
        android:text="@string/answerButtonText"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/numPad1"
        app:layout_constraintLeft_toRightOf="@+id/confirmButton"
        app:layout_constraintRight_toLeftOf="@+id/delButton" />

    <TextView
        android:id="@+id/decimalText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/decimalText"
        android:textColor="@android:color/black"
        android:textSize="30sp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="@+id/taskText"
        app:layout_constraintTop_toTopOf="@+id/taskText"
        android:layout_marginTop="8dp" />

    <TextView
        android:id="@+id/binaryText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/binaryText"
        android:textColor="@android:color/black"
        android:textSize="30sp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/answerText"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="@+id/taskText" />

</android.support.constraint.ConstraintLayout>
